[package]
name = "dragonet-macros"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Macro crate for `dragonet`"

[dependencies]
proc-macro2 = "1.0.89"
quote = {  version = "1.0.37", features = ["proc-macro"] }
syn = {  version = "2.0.87", features = ["full"] }

[lib]
proc-macro = true