[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
dragonet = { path = "../dragonet" }
dragonet-macros = { path = "../dragonet-macros" }

[[example]]
name = "chat_client"
path = "chat_client.rs"

[[example]]
name = "chat_server"
path = "chat_server.rs"